<resources>
    <string name="app_name">Xờ em Xem</string>
    ---------------------Home fragment-----------------------------
    <string name="menuhome">Home</string>
    <string name="trending">Trending</string>
    <string name="menufavourite">Favourite</string>
    <string name="menuprofile">Profile</string>
    <string name="ad_tag_url"><![CDATA[https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&correlator=]]></string>

    -----------------------------------------------------------
    <string name="history">Watched</string>
    <string name="film">Movies</string>
    <string name="game">Game</string>
    <string name="music">Music</string>
    <string name="news">News</string>
    -----------------------------------------------------
    <string name="username">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="taotaikhoan">Tạo tài khoản</string>
    <string name="laymatkhau">Lấy lại mật khẩu</string>
    -------------------------------------------------------
    <string name="taotdn">Tạo tên đăng nhập</string>
    <string name="taomk">Tạo mật khẩu</string>
    <string name="xacnhanmk">Xác nhận lại mật khẩu</string>
    <string name="taotk">Tạo tài khoản</string>
    ------------------------------------------------------
    <string name="tvbanchuadangnhap">Bạn chưa đăng nhập</string>
    <string name="boquangcao">Nâng cấp Vip ngay và loại bỏ quảng cáo  để có những trải nghiệm thú vị...</string>
    <string name="boquangcaothanhcong">Bạn đã là thành viên VIP, hãy tận hưởng những video mới nhất của chúng tôi để có những phút giây thư giãn nhé :))</string>
    <string name="nangcapVIP">Nâng cấp tài khoản VIP</string>
    <string name="chuadangnhap">Bạn chưa đăng nhập</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="titlethangtoan">Chọn phương thức thanh toán</string>

    <string name="tvtoptrending">Top trending</string>
    <string name="tvxemnhieu">Top watched</string>




</resources>