<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  >
<LinearLayout
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:src="@mipmap/ic_launchervideo"
        android:layout_marginTop="10dp"
        android:layout_width="120dp"
        android:layout_height="120dp"/>

        <EditText
            android:textSize="20dp"
            android:hint="@string/username"
            android:layout_marginTop="50dp"
            android:id="@+id/etusername"
            android:layout_width="250dp"
            android:layout_height="55dp"/>
        <EditText
            android:textSize="20dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            android:id="@+id/etpassword"
            android:layout_width="250dp"
            android:layout_height="55dp"/>
    <Button
        android:id="@+id/btnDangnhap"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_login"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:text="@string/dangnhap"
        android:layout_width="250dp"
        android:layout_height="55dp"/>
    <TextView
        android:padding="5dp"
        android:text="@string/laymatkhau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content">
        <Button

            android:background="#454343"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>
        <TextView
            android:layout_marginHorizontal="5dp"
            android:text="or"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:background="#454343"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>

    </LinearLayout>
    <Button
        android:id="@+id/btnTaotaikhoan"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_login"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:text="@string/taotaikhoan"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>


</LinearLayout>
</layout>