<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imgUser"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp"/>
    <TextView
        android:layout_below="@+id/imgUser"
        android:layout_marginVertical="10dp"
        android:id="@+id/tvTentaikhoanDangnhap"
        android:gravity="center"
        android:layout_marginHorizontal="40dp"
        android:padding="5dp"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
  <TextView
      android:layout_marginVertical="10dp"
      android:id="@+id/tvNoidung"
      android:layout_marginHorizontal="40dp"
      android:layout_below="@+id/tvTentaikhoanDangnhap"
      android:text="@string/boquangcao"
      android:textSize="30dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

    <Button
        android:layout_below="@+id/tvNoidung"
        android:textSize="15dp"
        android:text="@string/nangcapVIP"
        android:background="@drawable/custom_button_login"
        android:id="@+id/btnNangcapVIP"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btnNangcapVIP"
        android:textSize="20dp"
        android:text="@string/dangxuat"
        android:background="@drawable/custom_button_login"
        android:id="@+id/btnDangxuat"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
</RelativeLayout>

</layout>